--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
     "axios": "^0.19",
+    "babel-loader": "^8.1.0",
     "bootstrap": "^4.0.0",
     "cross-env": "^5.1",
     "jquery": "^3.2",
@@ -21,9 +24,11 @@
     "sass": "^1.20.1",
     "sass-loader": "7.*",
     "vue": "^2.5.17",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.42.1"
   },
   "dependencies": {
-    "google-maps-api-loader": "^1.1.1"
+    "google-maps-api-loader": "^1.1.1",
+    "normalize.css": "^8.0.1"
   }
 }
